Error Mitigation/MagiCoder/Data/javax_print_event/javax_print_eventOutputResult.txt
Sample: PrintJobAdapter_1
----------------------------------------------------------------
================================================================

Sample: PrintJobAdapter_2
----------------------------------------------------------------
================================================================

Sample: PrintJobAdapter_3
----------------------------------------------------------------
================================================================

Sample: PrintJobAdapter_4
----------------------------------------------------------------
================================================================

Sample: PrintJobAdapter_5
----------------------------------------------------------------
================================================================

Sample: PrintJobAdapter_6
----------------------------------------------------------------
================================================================

Sample: PrintServiceAttributeEvent_2
----------------------------------------------------------------
output:
./Data/javax_print_event/javaFiles/PrintServiceAttributeEvent_2.java:7: error: PrintService is abstract; cannot be instantiated
        PrintService printService = new PrintService();
                                    ^
./Data/javax_print_event/javaFiles/PrintServiceAttributeEvent_2.java:10: error: constructor PrintServiceAttributeEvent in class PrintServiceAttributeEvent cannot be applied to given types;
        PrintServiceAttributeEvent event = new PrintServiceAttributeEvent(printService);
                                           ^
  required: PrintService,PrintServiceAttributeSet
  found:    PrintService
  reason: actual and formal argument lists differ in length
2 errors


================================================================

